# leafpad

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  create-leafpad-git-repository.sh  intltool-extract.in  intltool-merge.in  intltool-update.in  leafpad.desktop  leafpad.desktop.in
data/: Makefile.in  leafpad.desktop  leafpad.desktop.in
data/icons/: Makefile.in
data/icons/16x16/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.am  Makefile.in
data/icons/scalable/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  he.gmo  he.po  hu.gmo  hu.po  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  leafpad.pot  lt.gmo  lt.po  nl.gmo  nl.po  (+23 more)
src/: Makefile.am  Makefile.in  about.c  about.h  callback.c  callback.h  dialog.c  dialog.h  dnd.c  emacs.c  encoding.c  encoding.h  file.c  file.h  font.c  font.h  gnomeprint.c  gnomeprint.h  gtkprint.c  gtkprint.h  hlight.c  i18n.h  indent.c  indent.h  intl.h  leafpad.h  linenum.c  linenum.h  main.c  menu.c  menu.h  print.c  print.h  search.c  search.h  selector.c  selector.h  undo.c  undo.h  utils.c  (+5 more)
